# anofox-forecast

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: periodicity.rs  simd_benchmark.rs
docs/: API_REFERENCE.md  exogenous_variables.md
examples/: debug_autoets.rs  quickstart.rs
examples/analysis/: changepoint.rs  changepoint_types.rs  detect_period.rs  outlier_detection.rs  seasonality.rs  stl_decomposition.rs
examples/clustering/: time_series_clustering.rs
examples/features/: autocorrelation.rs  basic_features.rs  complexity.rs  distribution.rs  entropy.rs
examples/forecasting/: arima.rs  baseline.rs  ensemble.rs  exponential.rs  intermittent.rs  theta.rs
examples/transform/: boxcox.rs  scaling.rs  window.rs
examples/validation/: cross_validation.rs  diagnostics.rs  feature_export.rs  forecast_export.rs  metrics.rs
scripts/: generate_nixtla_reference.py
src/: error.rs  lib.rs  simd.rs
src/changepoint/: cost.rs  mod.rs  pelt.rs
src/clustering/: dtw.rs  kmeans.rs  mod.rs
src/core/: forecast.rs  mod.rs  time_series.rs
src/detection/: fft.rs  mod.rs  outlier.rs  periodicity.rs  sazed.rs  seasonality.rs
src/features/: autocorrelation.rs  basic.rs  change.rs  complexity.rs  counting.rs  distribution.rs  entropy.rs  mod.rs  trend.rs
src/models/: garch.rs  mfles.rs  mod.rs  mstl_forecaster.rs  traits.rs
src/models/arima/: arima.rs  auto_arima.rs  diff.rs  mod.rs  model.rs
src/models/baseline/: mod.rs  naive.rs  random_walk.rs  seasonal_naive.rs  seasonal_window.rs  sma.rs
src/models/ensemble/: ensemble.rs  mod.rs  model.rs
src/models/exponential/: auto_ets.rs  ets.rs  holt.rs  mod.rs  (+3 more)
src/seasonality/: mod.rs  mstl.rs  stl.rs
src/transform/: boxcox.rs  mod.rs  scale.rs  window.rs
src/utils/: bootstrap.rs  cross_validation.rs  metrics.rs  mod.rs  ols.rs  optimization.rs  stats.rs
src/validation/: mod.rs  residual_tests.rs  stationarity.rs
tests/: exog_integration.rs  interval_calibration.rs  nixtla_validation.rs  property_tests.rs  statsforecast_comparison.rs  validate_against_pyriodicity.py
tests/reference/: arima_exog_reference.json  mfles_exog_reference.json  naive_exog_reference.json  test_data_exog.json
validation/: ANALYSIS.md  INVESTIGATION_SUMMARY.md  PROPOSED_FIXES.md  README.md  anofox_garch_implementation.md  auto_tbats.cpp  auto_tbats.hpp  check_seasonal_indexing.py  compare_features.py  compare_hw.py  compare_results.py  debug_hw_init.py  extract_tsfresh_features.py  generate_data.py  investigate_aic.md  pyproject.toml  run_all.py  run_feature_validation.py  run_rust_forecasts.py  run_statsforecast.py  tbats.cpp  tbats.hpp  test_auto_ets_debug.py  test_hw.py  test_rust_autoets.rs  test_rust_hw.rs  trace_hw.py
validation/cpp_theta_reference/: README.md  auto_theta.cpp  auto_theta.hpp  dynamic_optimized_theta.cpp  dynamic_optimized_theta.hpp  dynamic_theta.cpp  dynamic_theta.hpp  optimized_theta.cpp  optimized_theta.hpp  theta.cpp  theta.hpp  theta_pegels.cpp  theta_pegels.hpp  theta_utils.cpp  theta_utils.hpp
validation/data/: high_frequency.csv  intermittent.csv  long_memory.csv  multiplicative_seasonal.csv  noisy_seasonal.csv  seasonal.csv  seasonal_negative.csv  stationary.csv  structural_break.csv  trend.csv  trend_seasonal.csv
validation/output/: confidence_intervals.csv  feature_comparison.csv  feature_report.md  feature_summary.csv  point_forecasts.csv  report.md  step_metrics.csv  summary_metrics.csv
validation/results/rust/: confidence_intervals.csv  features.csv  point_forecasts.csv
validation/results/statsforecast/: confidence_intervals.csv  point_forecasts.csv
validation/results/tsfresh/: features.csv
validation/validation/results/rust/: confidence_intervals.csv  point_forecasts.csv
(+14 files in other folders)
