[package]
name = "anofox-forecast"
version = "0.1.0"
edition = "2021"
authors = ["Simon M"]
description = "Time series forecasting library - Rust port of anofox-time"
license = "MIT"
repository = "https://github.com/DataZooDE/anofox-forecast"
keywords = ["time-series", "forecasting", "arima", "ets", "statistics"]
categories = ["science", "mathematics"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
trueno = "0.8"
statrs = "0.18"
thiserror = "2.0"
rand = "0.8"
rustfft = "6.2"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[[bench]]
name = "simd_benchmark"
harness = false

[[bench]]
name = "periodicity"
harness = false

# Examples
[[example]]
name = "quickstart"
path = "examples/quickstart.rs"

[[example]]
name = "arima"
path = "examples/forecasting/arima.rs"

[[example]]
name = "exponential"
path = "examples/forecasting/exponential.rs"

[[example]]
name = "baseline"
path = "examples/forecasting/baseline.rs"

[[example]]
name = "theta"
path = "examples/forecasting/theta.rs"

[[example]]
name = "intermittent"
path = "examples/forecasting/intermittent.rs"

[[example]]
name = "ensemble"
path = "examples/forecasting/ensemble.rs"

[[example]]
name = "basic_features"
path = "examples/features/basic_features.rs"

[[example]]
name = "distribution"
path = "examples/features/distribution.rs"

[[example]]
name = "autocorrelation"
path = "examples/features/autocorrelation.rs"

[[example]]
name = "entropy"
path = "examples/features/entropy.rs"

[[example]]
name = "complexity"
path = "examples/features/complexity.rs"

[[example]]
name = "stl_decomposition"
path = "examples/analysis/stl_decomposition.rs"

[[example]]
name = "changepoint"
path = "examples/analysis/changepoint.rs"

[[example]]
name = "outlier_detection"
path = "examples/analysis/outlier_detection.rs"

[[example]]
name = "seasonality"
path = "examples/analysis/seasonality.rs"

[[example]]
name = "time_series_clustering"
path = "examples/clustering/time_series_clustering.rs"

[[example]]
name = "scaling"
path = "examples/transform/scaling.rs"

[[example]]
name = "boxcox"
path = "examples/transform/boxcox.rs"

[[example]]
name = "window"
path = "examples/transform/window.rs"

[[example]]
name = "metrics"
path = "examples/validation/metrics.rs"

[[example]]
name = "cross_validation"
path = "examples/validation/cross_validation.rs"

[[example]]
name = "diagnostics"
path = "examples/validation/diagnostics.rs"

[[example]]
name = "forecast_export"
path = "examples/validation/forecast_export.rs"

[[example]]
name = "feature_export"
path = "examples/validation/feature_export.rs"

[[example]]
name = "detect_period"
path = "examples/analysis/detect_period.rs"
