[project]
name = "forecast-validation"
version = "0.1.0"
description = "Validation suite comparing anofox-forecast (Rust) with statsforecast (NIXTLA)"
requires-python = ">=3.10"
dependencies = [
    "statsforecast>=1.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tsfresh>=0.20.0",
]

[dependency-groups]
dev = []
